--- a/resources/web/discover.html
+++ b/resources/web/discover.html
@@ -167,18 +167,9 @@
 
             </script>
           </div>
-          <h2 class="form-group col-xs-2 text"> Sorted by </h2>
-          <div class="form-group col-xs-2">
+         
 
-            <select id="sort" name="sort" class="form-control" role="menu" aria-labelledby="dropdownMenu1">
-              <option value="Worth">Worth</option>
-              <option value="Popularity">Popularity</option>
-
-            </select>
-
-          </div>
-
-          <button id="discover_search_btn" type="submit" class="btn btn-default">Search</button>
+          
         </form>
       </div>
 
@@ -206,8 +197,8 @@
               {{#.}}
 
               <tr> 
-              <td>{{creators_name}}</td>
-              <td>{{category_name}}</td>
+              <td><a href="creator_overview?creator={{creators_name}}"> {{creators_name}} </a></td>
+              <td>{{category_names}}</td>
               <td>{{worth_current}}</td>
               <td>{{number_of_backers}}</td>
               <td>{{reward_pct}}</td>
@@ -215,18 +206,19 @@
               {{/.}}
 
               </tbody>
-              </script>
-            </table>
 
+              </table>
+              </script>
+
+            </div>
           </div>
         </div>
+
+
       </div>
-
-
+      <!-- end of wrapper -->
     </div>
-    <!-- end of wrapper -->
   </div>
-</div>
 
 
 
