--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -71,7 +71,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
          <ul class="nav navbar-nav">
           <li><a href="/carousel">Home</a></li>
-          <li><a href="#discover">Discover</a></li>
+          <li><a href="/discover">Discover</a></li>
           <li><a href="/creators">Creators</a></li>
           <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
