--- a/resources/web/creatordashboardcustomize.html
+++ b/resources/web/creatordashboardcustomize.html
@@ -63,7 +63,7 @@
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                   <li class="active"><a href="/carousel">Home</a></li>
-                  <li><a href="#discover">Discover</a></li>
+                  <li><a href="/discover">Discover</a></li>
                   <li><a href="/creators">Creators</a></li>
                   <li><a href="/userdashboard" id="userdashboardhref" class="hide">Dashboard</a></li>
                   <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
