--- a/resources/web/creators_pages/99.html
+++ b/resources/web/creators_pages/99.html
@@ -62,7 +62,7 @@
  					<div class="navbar-collapse collapse">
  						<ul class="nav navbar-nav">
  							<li><a href="/carousel">Home</a></li>
- 							<li><a href="#discover">Discover</a></li>
+ 							<li><a href="/discover">Discover</a></li>
  							<li class="active"><a href="/creators">Creators</a></li>
  							<li><a href="/userdashboard" id="dashboardhref" class="hide">Dashboard</a></li>
  							<li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
