--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -65,7 +65,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                <li><a href="/carousel">Home</a></li>
-               <li><a href="#discover">Discover</a></li>
+               <li><a href="/discover">Discover</a></li>
                <li><a href="/creators">Creators</a></li>
                <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
@@ -102,7 +102,7 @@
 
 
                <ul class="dropdown-menu">
-                 <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li><a href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
                  <li class="divider"></li>
                  <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
